# yocto-AlberoProcedurale

./: .gitignore  CMakeLists.txt  README.txt  analisi_leak.txt  analisi_pointers.txt  analisi_valgrind_1.txt  analisi_valgrind_2.txt  analisi_valgrind_3.txt  log_ytree.txt
apps/: CMakeLists.txt
examples/: CMakeLists.txt
libs/yocto_examples/: yocto_raytrace.cpp
src/: CMakeLists.txt  Pseduostruct.txt  Restructoring.txt  cylinderTest.cpp  quicksort.cpp  treeToolSet.cpp  treeToolSet_REFACTOR.cpp  treeToolSet_old.cpp  yTreeTriplanarMap.cpp  yTriplanarStruct.cpp  ytree.cpp  ytree_multy.cpp  ytree_old.cpp  ytree_single.cpp
tests/tests_assets/cylinder_test/: cylinder_test.json
tests/tests_assets/cylinder_test/shapes/: large_attrPoint.ply
tests/tests_assets/node_crown/: node_crown_test.json
tests/tests_assets/node_crown/shapes/: leaf.ply
tests/tests_assets/point/: mod_point.json  point.json
tests/tests_assets/point/shapes/: attraction_point.ply  point.ply  tree_point.ply
tests/tests_assets/test_triplMaP/: triplanar_MaP_test.json
tests/tests_assets/test_triplMaP/shapes/: attraction_point.ply  cilindro.ply
